Fix z-index issues where the header menu would be covered by sliders

--- a/static/sass/_submasters.sass
+++ b/static/sass/_submasters.sass
@@ -11,6 +11,7 @@
 .slider
     height: 65vh
     margin-left: 35%
+    z-index: 0
 
 #addSubBtn
     margin-top: 75%
@@ -65,6 +66,7 @@
 
 #grandmaster
     width: 98.5%
+    z-index: 0
 
 #grandmasterTitle
     margin: 0
